fix height overflow & width

--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ body {
 .header {
   position: fixed;
   width: 100%;
-  height: 80pt;
+  height: auto;
   padding: 15pt 60pt;
   background: white;
   box-sizing: border-box;
@@ -66,7 +66,7 @@ body {
 
 .footer {
   width: 100%;
-  height: 200pt;
+  height: auto;
   padding: 15pt 60pt;
   background: rgb(50, 50, 50);
   box-sizing: border-box;
@@ -82,7 +82,7 @@ body {
 }
 
 .footer .about {
-  width: 100%;
+  max-width: 350px;;
 }
 
 .footer .about .title {
@@ -105,7 +105,7 @@ body {
 }
 
 .footer .group {
-  width: 20%;
+  max-width: 150px;
   margin: 0 10pt;
 }
 
@@ -114,7 +114,6 @@ body {
 }
 
 .aside {
-  width: 100%;
   height: 40pt;
   padding: 5pt 60pt;
   background: rgb(35, 35, 35);
